Fixed showing context menu on images on mobiles

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -29,3 +29,11 @@ html {
   width: 10rem;
   aspect-ratio: 2;
 }
+img {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+}
